# SmartSchoolPyClient

./: .env.example  .gitignore  LICENSE  README.md  list_messages.py  pyproject.toml  requirements.txt  smartschoolclient.py  websocket_client.py
.github/workflows/: pylint.yml
examples/: delete_message_by_id.py  example_boilerplate.py  get_courses.py  get_grades.py  get_helpdesk_tickets.py  get_live_sessions.py  get_planner.py  get_school_courses.py  get_upload_zone.py  intradesk.py  list_messages.py  websocket_client.py
src/smartschoolapi_tkbstudios/: __init__.py  smartschool.py
