[project]
name = "smartschoolapi_tkbstudios"
version = "1.2.0"
authors = [
  { name="TKB Studios", email="tkbstudios@mail.tkbstudios.com" },
]
description = "A python package to interact with SmartSchool, a Belgian School Management System"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tkbstudios/SmartSchoolPyClient"
Issues = "https://github.com/tkbstudios/SmartSchoolPyClient/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"